# hatchet

./: CHANGELOG.md  codecov.yml  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_upload_wheels.yaml  pip-install-tester.yaml  unit-tests.yaml
docs/: conf.py
docs/examples/read/: perfflowaspect.py
hatchet/: graphframe.py  version.py
hatchet/query/: compat.py  compound.py  engine.py  object_dialect.py  string_dialect.py
hatchet/readers/: caliper_native_reader.py  caliper_reader.py  hpctoolkit_reader_latest.py  perfflowaspect_array_reader.py  perfflowaspect_object_reader.py  perfflowaspect_reader.py  perfflowaspectobject_reader.py  timemory_reader.py
hatchet/tests/: caliper.py  conftest.py  graphframe.py  hpctoolkit_latest.py  perfflowaspect.py  query.py  query_compat.py
hatchet/tests/data/hpctoolkit-gamess/: cct.db  meta.db  profile.db
hatchet/tests/data/perfflowaspect-cpu-mem/: smoketest.array.turing.pfw  smoketest.withusage.array.turing.pfw  smoketest2.withusage.array.turing.pfw  smoketest3.array.turing.pfw  smoketest3.withusage.array.turing.pfw  smoketest_class.withusage.array.turing.pfw
hatchet/tests/data/perfflowaspect-object/: object-reader-test1.pfw  object-reader.pfw
hatchet/vis/: static_fixer.py
