[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "llnl-hatchet"
version = "2024.1.2"
description = "A Python library for analyzing hierarchical performance data."
authors = [
    "Abhinav Bhatele <bhatele@cs.umd.edu>",
    "Stephanie Brink <brink2@llnl.gov>",
    "Todd Gamblin <tgamblin@llnl.gov>",
]
license = "MIT"

[tool.ruff]
line-length = 88
target-version = 'py39'
include = ['\.pyi?$']
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.black]
line-length = 88
target-version = ['py35', 'py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
